--- a/project/package.json
+++ b/project/package.json
@@ -10,9 +10,14 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
+    "react-redux-firebase": "^3.4.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "react-video-tag": "0.0.10"
+    "react-video-tag": "0.0.10",
+    "redux": "^4.0.5",
+    "redux-firestore": "^0.13.0",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
