--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "kunskapspaketet",
-  "homepage": "https://digitalalabbet.github.io",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "homepage": "https://digitalalabbet.github.io/website_kunskapspaketet",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
