--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-redux-firebase": "^3.4.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-toastify": "^6.0.5",
     "react-video-tag": "0.0.10",
     "redux": "^4.0.5",
     "redux-firestore": "^0.13.0",
