--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "bootstrap": "^4.5.0",
     "firebase": "^7.14.4",
     "gh-pages": "^2.2.0",
+    "i18next": "^19.4.5",
+    "i18next-browser-languagedetector": "^4.2.0",
+    "i18next-http-backend": "^1.0.15",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-data-table-component": "^6.9.3",
     "react-dom": "^16.13.1",
+    "react-i18next": "^11.5.0",
     "react-pagination-table": "^2.0.2",
     "react-quiz-component": "^0.3.4",
     "react-redux": "^7.2.0",
